set(ICON ee.rc)

macro(ee_example EE_EXAMPLE_NAME)
    add_executable(${EE_EXAMPLE_NAME} "example_${EE_EXAMPLE_NAME}.cpp" ${ICON})
    target_link_libraries(${EE_EXAMPLE_NAME} ee)
    set_target_properties(${EE_EXAMPLE_NAME} PROPERTIES LINK_FLAGS "/ENTRY:mainCRTStartup")
endmacro()

# disable console
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")

ee_example(color)
# ee_example(coroutine)
ee_example(engine)
# ee_example(online)
ee_example(physics)
ee_example(pong)
# ee_example(shapes)
# ee_example(tween)
# ee_example(turbulent)
ee_example(conway)
ee_example(imgui)
ee_example(lissajous)
ee_example(tfx)
ee_example(puzz)