macro(ee_example EE_EXAMPLE_NAME ICON)
    add_executable(${EE_EXAMPLE_NAME} "example_${EE_EXAMPLE_NAME}.cpp" "resources/icons/${ICON}")
    target_link_libraries(${EE_EXAMPLE_NAME} carnot)
    set_target_properties(${EE_EXAMPLE_NAME} PROPERTIES LINK_FLAGS "/ENTRY:mainCRTStartup")
endmacro()

# disable console
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")

ee_example(color carnot.rc)
# ee_example(coroutine)
ee_example(engine carnot.rc)
# ee_example(online)
ee_example(physics carnot.rc)
ee_example(pong carnot.rc)
# ee_example(shapes)
# ee_example(tween)
# ee_example(turbulent)
ee_example(conway carnot.rc)
ee_example(imgui carnot.rc)
ee_example(lissajous lissajous.rc)
ee_example(tfx tfx.rc)
ee_example(puzz carnot.rc)