macro(carnot_example CARNOT_EXAMPLE_NAME ICON)
    if (WIN32)
        add_executable(${CARNOT_EXAMPLE_NAME} "example_${CARNOT_EXAMPLE_NAME}.cpp" "resources/icons/${ICON}")
        set_target_properties(${CARNOT_EXAMPLE_NAME} PROPERTIES LINK_FLAGS "/ENTRY:mainCRTStartup")
    else()
        add_executable(${CARNOT_EXAMPLE_NAME} "example_${CARNOT_EXAMPLE_NAME}.cpp")
    endif()
    target_link_libraries(${CARNOT_EXAMPLE_NAME} carnot)
    set_target_properties(${CARNOT_EXAMPLE_NAME} PROPERTIES DEBUG_POSTFIX -d)
    install(TARGETS ${CARNOT_EXAMPLE_NAME}
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    )
endmacro()

# disable console
if (WIN32)
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
endif()

carnot_example(hello_world carnot.rc)
carnot_example(coroutine carnot.rc)
carnot_example(engine carnot.rc)
carnot_example(debug carnot.rc)
carnot_example(online carnot.rc)
carnot_example(udp carnot.rc)
carnot_example(physics carnot.rc)
carnot_example(pong carnot.rc)
carnot_example(trigger carnot.rc)
carnot_example(shapes carnot.rc)
# carnot_example(turbulent)
carnot_example(conway carnot.rc)
carnot_example(imgui carnot.rc)
carnot_example(lissajous lissajous.rc)
carnot_example(tfx tfx.rc)
carnot_example(puzz carnot.rc)
carnot_example(effects carnot.rc)
carnot_example(planets carnot.rc)
carnot_example(melscope melscope.rc)
carnot_example(ik carnot.rc)
carnot_example(sequences carnot.rc)
carnot_example(signals carnot.rc)
carnot_example(hexic carnot.rc)