add_executable(test1 src/test1.cpp)
target_link_libraries(test1 SFVG::sfvg)

add_executable(test2 src/test2.cpp)
target_link_libraries(test2 SFVG::sfvg)

add_executable(test3 src/test3.cpp)
target_link_libraries(test3 SFVG::sfvg)

add_executable(test4 src/test4.cpp)
target_link_libraries(test4 SFVG::sfvg)

add_executable(test5 src/test5.cpp)
target_link_libraries(test5 SFVG::sfvg)

add_executable(test6 src/test6.cpp)
target_link_libraries(test6 SFVG::sfvg)

add_executable(test7 src/test7.cpp)
target_link_libraries(test7 SFVG::sfvg)

add_executable(test8 src/test8.cpp)
target_link_libraries(test8 SFVG::sfvg)

add_executable(test9 src/test9.cpp)
target_link_libraries(test9 SFVG::sfvg)

add_executable(benchmark src/benchmark.cpp)
target_link_libraries(benchmark SFVG::sfvg)