macro(sfvg_test SFVG_TEST_NAME)
    add_executable(${SFVG_TEST_NAME} src/test_${SFVG_TEST_NAME}.cpp)
    target_link_libraries(${SFVG_TEST_NAME} PRIVATE SFVG::sfvg)
    set_target_properties(${SFVG_TEST_NAME} PROPERTIES FOLDER "Tests")
endmacro()

sfvg_test(anim)
sfvg_test(benchmark)
sfvg_test(bezier)
sfvg_test(inside)
sfvg_test(lines)
sfvg_test(miter)
sfvg_test(points)
sfvg_test(poly)
sfvg_test(xsection)
