macro(ee_test EE_TEST_NAME)
    add_executable(${EE_TEST_NAME} src/test_${EE_TEST_NAME}.cpp)
    target_link_libraries(${EE_TEST_NAME} PRIVATE carnot::carnot)
    set_target_properties(${EE_TEST_NAME} PROPERTIES FOLDER "Tests")
endmacro()

# ee_test(anim)
# ee_test(benchmark)
# ee_test(bezier)
# ee_test(inside)
# ee_test(lines)
# ee_test(miter)
# ee_test(points)
# ee_test(poly)
# ee_test(xsection)
